<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/fragment_my_places">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_show_places"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/btn_show_places"

            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_settings"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="32dp" />
        <Button
            android:id="@+id/btn_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/action_settings"

            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            app:layout_constraintTop_toBottomOf="@+id/btn_show_places"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn3"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/about"

            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            app:layout_constraintTop_toBottomOf="@+id/btn_settings"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn4"
            app:layout_constraintLeft_toLeftOf="parent"

            />

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/exit"

            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"

            app:layout_constraintTop_toBottomOf="@+id/btn3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
