<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".CustomBtnFragment">

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:ems="10"

        android:hint="@string/hint_input"
        android:inputType="numberDecimal"

        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_custom"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btn_custom"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:background="@drawable/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/output"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/hint_result"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"

        app:layout_constraintBottom_toTopOf="@+id/btn_add_zero"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_custom"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btn_add_zero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/btn_add_zero"
        android:tag="0"

        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"

        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</android.support.constraint.ConstraintLayout>