<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="96dp"

        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.25"

        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/textview_label"

        android:layout_marginLeft="64dp"

        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginStart="64dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"

        android:text="@string/hi_label"

        app:layout_constraintRight_toRightOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="96dp"
        android:layout_height="96dp"

        app:srcCompat="@mipmap/ic_launcher"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/imageView3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="96dp"
        android:layout_height="96dp"

        app:srcCompat="@mipmap/ic_launcher"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@+id/imageView4"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="96dp"
        android:layout_height="96dp"

        app:srcCompat="@mipmap/ic_launcher"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"

        android:text="@string/label_chain_style"
        android:textSize="14sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/chain_style_selected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"

        android:text="@string/label_chain_style_package"
        android:textSize="14sp"

        app:layout_constraintLeft_toRightOf="@id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <ImageView
        android:id="@+id/chainA"
        android:layout_width="96dp"
        android:layout_height="96dp"

        app:srcCompat="@mipmap/ic_launcher"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        app:layout_constraintHorizontal_chainStyle="packed"

        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/chainB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline3" />

    <ImageView
        android:id="@+id/chainB"
        android:layout_width="96dp"
        android:layout_height="96dp"

        app:srcCompat="@mipmap/ic_launcher"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        app:layout_constraintHorizontal_chainStyle="packed"

        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/chainC"
        app:layout_constraintLeft_toRightOf="@+id/chainA"
        app:layout_constraintBottom_toTopOf="@+id/guideline3" />

    <ImageView
        android:id="@+id/chainC"
        android:layout_width="96dp"
        android:layout_height="96dp"

        app:srcCompat="@mipmap/ic_launcher"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        app:layout_constraintHorizontal_chainStyle="packed"

        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/chainB"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"/>


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/btn_apply_package"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/label_chain_style_package"
        style="@style/Widget.AppCompat.Button"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_apply_spread"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btn_apply_spread"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/label_chain_style_spread"
        style="@style/Widget.AppCompat.Button"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_apply_package"
        app:layout_constraintRight_toLeftOf="@+id/btn_apply_spread_inside"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btn_apply_spread_inside"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:text="@string/label_chain_style_spread_inside"
        style="@style/Widget.AppCompat.Button"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_apply_spread"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />


</android.support.constraint.ConstraintLayout>